.golden/2157463209259933381/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:23:
  |
7 | main = putStrLn [f|foo\Pbar|]
  |                       ^
lexical error in literal section

    • In the quasi-quotation: [f|foo\Pbar|]
  |
7 | main = putStrLn [f|foo\Pbar|]
  |                    ^^^^^^^^^^
